# RClass-project

./: .gitignore  RClass.ipynb  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
Ajay's code/: rclass_scipy.ipynb  testing_gurobi.ipynb  training_gurobi.ipynb
Helen's code/: Scipy's linprog based classifier.ipynb
Project/: pyvenv.cfg
Project/Scripts/: activate  activate.bat
src/RClass/: Chebeval_scalars.py  RationalMinMaxOpt.ipyn  RationalMinMaxOpt.py
src/rclass/: bisection.py  data.py  experiment.py  features.py  solver_gurobi.py  solver_sage.py
tests/: smoke_test.py  test_data.py  test_features.py
