[metadata]
name = rclass
version = 0.1.0
description = Rational function–based MNIST classifier
long_description = file: README.md
long_description_content_type = text/markdown
author = Omar Ghariani, Helen Dawit Weldemichael, Ajay Satish Patil
license = MIT
license_files = LICENSE
url = https://github.com/Gambotch1/RClass-project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scikit-learn
    matplotlib
    tensorflow>=2.11
    gurobipy

[options.packages.find]
where = src
